--- a/css/main.css
+++ b/css/main.css
@@ -2,20 +2,30 @@ html {
   box-sizing: border-box;
   font-family: Merriweather, serif;
   line-height: 1.5;
+  width: 1000px;
+  height: auto;
 }
 
- *, *::before, *::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+    "banner banner banner"
+    "box1 box2 box3";
+  gap: .75rem;
+}
+
 body {
-  font-size: .9rem;
   margin: 0;
   padding: 0;
 }
 
-main {
-  gap: .75rem;
+h1 h2 dt {
+  font-style: italic;
 }
 
 header {
@@ -32,17 +42,18 @@ h2 {
   margin: 0;
 }
 
+h3 {
+  font-size: 1.3rem;
+  font-style: italic;
+}
+
 main > img {
   grid-area: banner;
   max-width: inherit;
 }
 
-h1 h2 dt {
-  font-style: italic;
-}
-
 figcaption {
-  padding: .2rem 1.2rem;
+  padding: .5rem;
 }
 
 figure {
@@ -53,14 +64,14 @@ img {
   width: 100%;
 }
 
-.banner-image {
-  display: grid;
-  grid-area: banner;
-}
-
-.banner-text {
+.explore {
   grid-area: banner;
   color: white;
   align-self: end;
-  padding: 1.5rem 1rem;
+  padding: 1rem;
+}
+
+.seven-wonders {
+  display: grid;
+  grid-area: banner;
 }
